# openstack-ansible-plugins

./: .gitignore  .gitreview  CONTRIBUTING.rst  README.rst  Vagrantfile  bindep.txt  connection  filter  galaxy.yml  library  requirements.yml  run_tests.sh  setup.cfg  strategy  test-requirements.txt  tox.ini
action/: _v1_config_template.py  _v2_config_template.py  config_template.py
callback/: debug_message_collector.py  human_log.py
connection/: ssh.py
examples/: example.ini  playbook.yml
filter/: osa-filters.py
lookup/: packages_file.py  py_pkgs.py
meta/: main.yml
playbooks/: adjutant.yml  aodh.yaml  barbican.yml  blazar.yml  ceilometer.yml  ceph_install.yml  ceph_nfs_install.yml  ceph_pools.yml  ceph_rgw_install.yml  ceph_rgw_keystone_setup.yml  certificate_authority.yml  certificate_generate.yml  certificate_ssh_authority.yml  cinder.yml  cloudkitty.yml  containers_deploy.yml  containers_lxc_create.yml  containers_lxc_destroy.yml  containers_lxc_host.yml  designate.yml  freezer.yml  galera_server.yml  glance.yml  gnocchi.yml  haproxy.yml  haproxy_service_config.yml  heat.yml  horizon.yml  infra_journal_remote.yml  ironic.yml  journald_remote.yml  k8s.yml  keystone.yml  magnum.yml  magnum_capi_proxy.yml  manila.yml  masakari.yml  memcached.yml  mistral.yml  neutron.yml  (+23 more)
strategy/: artifacting.py  linear.py  tagfilter.py
test/: osa_tests.py
tests/: ansible-role-requirements.yml  inventory  test-config_template.yml  test-connection-plugin.yml  test-filters.yml  test-lookups.yml  test-modules.yml  test-strategy-tagfilter.yml  test.yml
(+112 files in other folders)
